--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ a {
 .container-nav {
   background: #fff;
   display: flex;
+  width: 1600px;
 }
 
 .webstudio {
@@ -478,6 +479,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 1600px;
 }
 .regular-customers-title {
   margin-bottom: 50px;
@@ -716,6 +718,7 @@ a {
   align-items: center;
   gap: 30px;
   margin-bottom: 94px;
+  width: 1567px;
 }
 
 .project {
